...
      appBar: selectedIndex == 3
          ? null
          : AppBar(
              leading: Image.asset(kLogo),
              centerTitle: true,
              title: Text(
                  "${selectedIndex == 0 ? "Marketplace" : selectedIndex == 1 ? "On Sale Items" : selectedIndex == 2 ? "Inventory" : selectedIndex == 3 ? "Account info" : ""}"),
              actions: [
                IconButton(
                    onPressed: () async {
                      await Navigator.of(context).push(
                          MaterialPageRoute(builder: (ctx) => SearchScreen()));
                    },
...
